Bug 1273477 - Allow choosing a directory for Becky AB import. ui-r=Paenglab, r=rkent